// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`file resource e2e file resource test: File create 1`] = `
Object {
  "_message": "Wrote file file.txt",
  "content": "Hello, world!",
  "id": "file.txt",
  "path": "file.txt",
}
`;

exports[`file resource e2e file resource test: File create plan 1`] = `
Object {
  "currentState": "",
  "describe": "Write file.txt",
  "diff": "- Original  - 0
+ Modified  + 1

+ Hello, world!",
  "newState": "Hello, world!",
}
`;

exports[`file resource e2e file resource test: File destroy 1`] = `
Object {
  "_message": "Wrote file file.txt",
  "content": "Hello, world!1",
  "id": "file.txt",
  "path": "file.txt",
}
`;

exports[`file resource e2e file resource test: File update 1`] = `
Object {
  "_message": "Wrote file file.txt",
  "content": "Hello, world!1",
  "id": "file.txt",
  "path": "file.txt",
}
`;

exports[`file resource e2e file resource test: File update plan 1`] = `
Object {
  "currentState": "Hello, world!",
  "describe": "Write file.txt",
  "diff": "- Original  - 1
+ Modified  + 1

- Hello, world!
+ Hello, world!1",
  "newState": "Hello, world!1",
}
`;

exports[`file resource e2e remote file resource test: File create 1`] = `
Object {
  "_message": "Wrote file file.txt",
  "content": "query {
  allGatsbyPlugin {
    nodes {
      name
      options
      resolvedOptions
      package {
        version
      }
      ... on GatsbyTheme {
        files {
          nodes {
            path
          }
        }
        shadowedFiles {
          nodes {
            path
          }
        }
      }
    }
  }  
}",
  "id": "file.txt",
  "path": "file.txt",
}
`;

exports[`file resource e2e remote file resource test: File create plan 1`] = `
Object {
  "currentState": "",
  "describe": "Write file.txt",
  "diff": "- Original  -  0
+ Modified  + 24

+ query {
+   allGatsbyPlugin {
+     nodes {
+       name
+       options
+       resolvedOptions
+       package {
+         version
+       }
+       ... on GatsbyTheme {
+         files {
+           nodes {
+             path
+           }
+         }
+         shadowedFiles {
+           nodes {
+             path
+           }
+         }
+       }
+     }
+   }  
+ }",
  "newState": "query {
  allGatsbyPlugin {
    nodes {
      name
      options
      resolvedOptions
      package {
        version
      }
      ... on GatsbyTheme {
        files {
          nodes {
            path
          }
        }
        shadowedFiles {
          nodes {
            path
          }
        }
      }
    }
  }  
}",
}
`;

exports[`file resource e2e remote file resource test: File destroy 1`] = `
Object {
  "_message": "Wrote file file.txt",
  "content": "https://gist.githubusercontent.com/KyleAMathews/3d763491e5c4c6396e1a6a626b2793ce/raw/545120bfecbe7b0f97f6f021801bc8b6370b5b41/gistfile2.txt",
  "id": "file.txt",
  "path": "file.txt",
}
`;

exports[`file resource e2e remote file resource test: File update 1`] = `
Object {
  "_message": "Wrote file file.txt",
  "content": "https://gist.githubusercontent.com/KyleAMathews/3d763491e5c4c6396e1a6a626b2793ce/raw/545120bfecbe7b0f97f6f021801bc8b6370b5b41/gistfile2.txt",
  "id": "file.txt",
  "path": "file.txt",
}
`;

exports[`file resource e2e remote file resource test: File update plan 1`] = `
Object {
  "currentState": "query {
  allGatsbyPlugin {
    nodes {
      name
      options
      resolvedOptions
      package {
        version
      }
      ... on GatsbyTheme {
        files {
          nodes {
            path
          }
        }
        shadowedFiles {
          nodes {
            path
          }
        }
      }
    }
  }  
}",
  "describe": "Write file.txt",
  "diff": "- Original  - 23
+ Modified  +  3

- query {
-   allGatsbyPlugin {
-     nodes {
-       name
-       options
-       resolvedOptions
-       package {
-         version
-       }
-       ... on GatsbyTheme {
-         files {
-           nodes {
-             path
-           }
-         }
-         shadowedFiles {
-           nodes {
-             path
-           }
-         }
-       }
-     }
-   }  
+ const options = {
+   key: process.env.WHATEVER
+   
  }",
  "newState": "const options = {
  key: process.env.WHATEVER
  
}",
}
`;
